src/scss/components/paragraphs/_accordion.scss
.accordion {
  margin-top: $spacing-double;

  @include breakpoint($breakpoint-l) {
    margin-top: $spacing-quadruple;
  }

  .accordion__container {
    padding-top: $spacing-double;

    @include breakpoint($breakpoint-l) {
      padding-top: $spacing-quadruple;
    }
  }

  .accordion__title {
    @include font-size(32px, 32px);

    @include breakpoint($breakpoint-l) {
      @include font-size(52px, 52px);
    }
  }

  .accordion__description {
    @include font-size(18px, 27px);
    margin-top: $spacing;

    p:first-child {
      margin-top: 0;
    }
  }

  .accordion__wrapper {
    border-bottom: 1px solid $color-black-20;
  }

  .accordion__title + .accordion__wrapper,
  .accordion__description + .accordion__wrapper {
    margin-top: $spacing-double;

    @include breakpoint($breakpoint-l) {
      margin-top: $spacing-quadruple;
    }
  }

  .accordion-item__header {
    @include font-size(20px, 22px);
    border-top: 1px solid $color-black-20;
    font-weight: $font-weight-regular;
    margin: 0;
    padding: 0;

    @include breakpoint($breakpoint-l) {
      @include font-size(24px, 28px);
    }

    // Accordion open state.
    &.handorgel__header--open .accordion-item__button--toggle {
      background-color: transparent;

      &::after {
        background-image: url('../icons/hds/ui/angle-up.svg');
      }
    }

    // Accordion focused state.
    .accordion-item__button--toggle:focus,
    &.handorgel__header--focus .accordion-item__button--toggle {
      position: relative;

      &::after {
        border-radius: 2px;
        box-shadow: 0 0 0 3px $color-black-90;
        pointer-events: none;
      }
    }
  }

  .accordion-item__button {
    align-items: center;
    background: transparent;
    border: none;
    display: flex;
    margin: 0;
    padding: 0;
    text-align: left;
  }

  .accordion-item__icon {
    display: inline-flex;
    margin-right: $spacing-half;

    @include breakpoint($breakpoint-l) {
      margin-right: $spacing;
    }

    .icon {
      --icon-proportions: 1.5rem;

      @include breakpoint($breakpoint-l) {
        --icon-proportions: 3rem;
      }
    }
  }

  .accordion-item__button--toggle {
    @include font-size(20px, 22px);
    border: none;
    padding: $spacing 60px $spacing 0;
    position: relative;
    width: 100%;

    @include breakpoint($breakpoint-l) {
      @include font-size(24px, 28px);
      padding: $spacing-and-half 60px $spacing-and-half 0;
    }

    &::after {
      background-image: url('../icons/hds/ui/angle-down.svg');
      background-position: center;
      background-repeat: no-repeat;
      background-size: 100%;
      content: "";
      height: 30px;
      position: absolute;
      right: 4px; // Move the icon slightly to the left
      top: 50%;
      transform: translateY(-50%);
      width: 30px;

      @include breakpoint($breakpoint-l) {
        height: 32px;
        width: 32px;
      }
    }
  }

  .accordion-item__button--close {
    @include font-size(16px, 24px);
    align-items: center;
    bottom: $spacing;
    display: flex;
    padding: $spacing-half;
    position: absolute;
    right: -1px; // To adjust the positioning so that the element lines up nicely.

    &:focus {
      border-radius: 2px;
      box-shadow: 0 0 0 3px $color-black-90;
      outline: none;
      pointer-events: none;
    }

    &:hover {
      cursor: pointer;
    }
  }

  .accordion-item__content {
    border: none;

    h3, h4, h5, h6 {
      margin-top: $spacing-double;
    }

    h3 {
      @include font-size(20px, 24px);
      font-weight: 500;

      @include breakpoint($breakpoint-l) {
        @include font-size(24px, 28px);
      }
    }

    h4 {
      @include font-size(18px, 18px);
      font-weight: 500;

      @include breakpoint($breakpoint-l) {
        @include font-size(22px, 22px);
      }
    }

    h5 {
      @include font-size(18px, 18px);
      font-weight: 500;
    }

    h6 {
      @include font-size(16px, 16px);
      font-weight: 700;

      @include breakpoint($breakpoint-l) {
        @include font-size(16px, 16px);
      }
    }
  }

  .accordion-item__content__inner {
    padding: 0 0 $spacing-quadruple;
    position: relative;

    > *:first-child {
      margin-top: 0;
    }
  }

  // This heading-level shouldn't probably semantically ever be used since the main header is h2 or lower.
  h2 {
    @include font-size(24px, 28px);
    font-weight: $font-weight-regular;

    @include breakpoint($breakpoint-l) {
      @include font-size(36px, 43px);
    }
  }

  h3 {
    @include font-size(22px, 26px);
    font-weight: $font-weight-regular;

    @include breakpoint($breakpoint-l) {
      @include font-size(28px, 36px);
    }
  }

  h2, h3, h4, h5, h6 {
    &:first-child {
      margin-top: 0;
    }
  }

  .columns {
    &:first-child .columns__container {
      padding-top: 0;
    }

    .columns__container {
      padding-left: $spacing-half;
      padding-right: $spacing-half;
      padding-top: 0;

      @include breakpoint($breakpoint-l) {
        padding-left: 0;
        padding-right: 0;
      }
    }

    .columns__title {
      margin-top: 0;
    }

    .columns__content:first-child {
      margin-top: 0;
    }

    .list-of-links {
      margin-top: 0;

      .list-of-links__container {
        padding-top: 0;
      }
    }
  }

  .text {
    @include font-size(18px, 24px);

    &:first-child .text__container {
      padding-top: 0;
    }

    .text__container {
      padding-left: 0;
      padding-right: 0;
    }

    .text__text-content {
      padding-left: 0;

      > *:first-child {
        margin-top: 0;
      }
    }
  }
}

// Show border-top only on first accordion item header in white accordion.
.accordion--white {
  .accordion__container {
    > .accordion__wrapper {
      ~ .accordion__wrapper .accordion-item__header {
        border-top: none;
      }
    }
  }
}

// Grey accordion styles
.accordion--grey {
  .accordion-item__header {
    background-color: $color-black-5;
    border-color: $color-white;

    .accordion-item__button--toggle {
      padding: $spacing ($spacing-double + 50px) $spacing $spacing;

      @include breakpoint($breakpoint-l) {
        padding: $spacing-and-half ($spacing-double + 50px) $spacing-and-half $spacing-and-half;
      }

      &::after {
        right: $spacing;

        @include breakpoint($breakpoint-l) {
          right: $spacing-and-half;
        }
      }
    }
  }

  .accordion__wrapper {
    border-color: $color-black-5;
  }

  .accordion-item__content {
    background-color: $color-black-5;
    padding-left: $spacing;
    padding-right: $spacing;

    @include breakpoint($breakpoint-l) {
      padding-left: $spacing-and-half;
      padding-right: $spacing-and-half;
    }
  }
}

// Handorgel library style overrides
.accordion .handorgel {
  border-left: none;
  border-right: none;
  border-top: none;

  .handorgel__header--open .handorgel__header__button {
    background-color: transparent;
  }

  .handorgel__header--focus .handorgel__header__button {
    background-color: transparent;
  }

  .handorgel__header__button {
    background-color: transparent;
    border: none;
  }

  .handorgel__content {
    border: 0;
  }
}

